# trifecta-lens

./: .gitignore  AGENT.md  CLAUDE.md  CONTRIBUTING.md  DEBT.md  DECISIONS.md  DESIGN.md  ENVIRONMENT.md  FIXTURES.md  INCIDENTS.md  LICENSE  Makefile  OPEN_QUESTIONS.md  README.md  RELEASE.md  ROADMAP.md  SPEC.md  TASKS.md  USAGE.md  findings.ndjson  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: CAPTURE_LOG.md  README.md  __init__.py  agent.py  capture_inventory.py  mcp_client.py  mcp_config.py  otel_export.py  poisoned.html  providers.py  replay.py  run_direct.py  run_live.py  run_mcp.py  secret.txt  sink_server.py  spans.py  tools.py
demo/issues/: issue-1.md  issue-2.md  issue-3.md
demo/issues_control/: issue-1.md  issue-2.md
demo/vault/: integration_key.txt
fixtures/: FIXTURES_PROVENANCE.md  benign_lookalike_not_the_secret.jsonl  benign_modern_stack_summary.jsonl  benign_no_flow.jsonl  benign_redacted_secret.jsonl  benign_secret_to_nonsink.jsonl  benign_short_value_collision.jsonl  benign_source_echo_no_secret.jsonl  causal_chain.jsonl  cross_agent_handoff.jsonl  demo_mcp_trace.otlp.json  demo_mcp_trace.provenance.md  demo_realized.jsonl  demo_realized.provenance.md  inventory.json  inventory.provenance.md  modern_stack_trifecta.jsonl  triage_benign_control.jsonl  triage_refused_sonnet5.jsonl  worked_example.jsonl
fixtures/golden/: README.md  causal_chain.findings.ndjson  cross_agent_handoff.findings.ndjson  demo_realized.findings.ndjson  modern_stack_trifecta.findings.ndjson  worked_example.findings.ndjson
fixtures/usage/: delegating_inventory.json  nonmcp_catalog.yaml  nonmcp_inventory.json  nonmcp_trace.jsonl  wiki_tools.json
schema/: findings.schema.json  inventory.schema.json
tests/: regenerate_golden.py  test_acceptance.py  test_benign_corpus.py  test_capture.py  test_catalog.py  test_catalog_real_stacks.py  test_cli.py  test_contributing.py  test_coverage.py  test_cross_agent.py  test_cross_agent_reachable.py  test_demo_harness.py  test_demo_providers.py  test_demo_replay.py  test_detector.py  test_determinism.py  test_engine_automaton.py  test_extraction_config.py  test_findings_schema.py  test_gates.py  test_import.py  test_incidents.py  test_ingest.py  test_inventory.py  test_inventory_schema.py  test_join.py  test_labeling.py  test_loader.py  test_mcp_config.py  test_model.py  test_no_network_in_core.py  test_otlp_loader.py  test_path_basis.py  test_posture.py  test_reachable.py  test_readme.py  test_report.py  test_scope_claims.py  test_svg.py  test_taint.py  (+3 more)
trifecta_capture/: __init__.py  cli.py  inventory_build.py
trifecta_lens/: __init__.py  catalog.py  cli.py  coverage.py  engine.py  extraction.py  findings.py  inventory.py  join.py  labeling.py  loader.py  model.py  report.py  roles.py  svg.py  taint.py
trifecta_lens/catalogs/: exfil_v1.yaml
