[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trifecta-lens"
version = "0.1.0"
description = "Read-only analyzer that detects lethal-trifecta / data-exfil exposure in MCP-based agent systems from a captured trace and the MCP manifest."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
trifecta-lens = "trifecta_lens.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
]
# demo/ only (the human-run `make demo-live`, task 1.2). Isolated from the
# analyzer core, which has zero runtime dependencies: `make check` uses `dev`
# and never installs this. The client packages are the demo's transports:
# `anthropic` for the Anthropic endpoint, `openai` for the Ollama
# (OpenAI-compatible) endpoint. Core stays stdlib-pure.
demo = [
    "anthropic>=0.40",
    "openai>=1.0",
]

[tool.hatch.build.targets.wheel]
# Ship only the analyzer core. demo/ and tests/ are development/human-run and
# are not part of the distributed package.
packages = ["trifecta_lens"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
