[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trifecta-lens"
version = "0.1.0"
description = "Read-only analyzer that detects lethal-trifecta / data-exfil exposure in MCP-based agent systems from a captured trace and the MCP manifest."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
# The catalog is a human-edited, comment-carrying data file, so it earns YAML
# (DESIGN.md §8). That is the core's ONE runtime dependency: a dependency tree you
# can read in one screen is itself a feature for a tool whose moat is auditability.
dependencies = ["PyYAML>=6.0"]

[project.scripts]
trifecta-lens = "trifecta_lens.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "types-PyYAML",
]
# demo/ only (the human-run captures). Isolated from the analyzer core, which
# has zero runtime dependencies: `make check` uses `dev` and never installs this.
# Every demo module imports these lazily (inside functions), exactly as
# providers.py imports its SDK, so the modules import and unit-test without the
# extra — only a live capture pulls the packages in. Core stays stdlib-pure.
#   Transports: `anthropic` (Anthropic endpoint), `openai` (OpenAI-compatible /
#   Ollama / Hugging Face router endpoints).
#   Real-MCP capture (Phase 2, task 2.4/2.5): `mcp` is the MCP client/server SDK
#   (stdio transport); `opentelemetry-sdk` + the OTLP proto-common encoder emit a
#   REAL OTLP trace document; `openinference-semantic-conventions` supplies the
#   OpenInference attribute keys the core loader already keys on.
demo = [
    "anthropic>=0.40",
    "openai>=1.0",
    "mcp>=1.2",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-common>=1.20",
    "openinference-semantic-conventions>=0.1.9",
]

[tool.hatch.build.targets.wheel]
# Ship only the analyzer core. demo/ and tests/ are development/human-run and
# are not part of the distributed package.
packages = ["trifecta_lens"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
