[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trifecta-lens"
version = "0.1.0"
# This one line is the PyPI summary — the whole description most people will read.
# It said "...and the MCP manifest", which DECISIONS.md D2/F1 proved FALSE: the file
# an MCP host loads carries no tools at all. The inputs are a captured trace and a
# captured tool INVENTORY. A wrong sentence here would be the first thing a reader
# saw, and it would be wrong about the input the two capability tiers run on.
description = "Read-only analyzer for lethal-trifecta / data-exfil exposure in MCP agent systems: reads a captured trace and tool inventory, reports realized / reachable / posture findings."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Matthew Sigurko", email = "m.sigor@gmail.com" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "llm-agents",
    "ai-security",
    "prompt-injection",
    "lethal-trifecta",
    "data-exfiltration",
    "static-analysis",
    "opentelemetry",
    "openinference",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

# The catalog is a human-edited, comment-carrying data file, so it earns YAML
# (DESIGN.md §8). That is the core's ONE runtime dependency: a dependency tree you
# can read in one screen is itself a feature for a tool whose moat is auditability.
dependencies = ["PyYAML>=6.0"]

[project.urls]
Homepage = "https://github.com/SigorMatt/trifecta-lens"
Repository = "https://github.com/SigorMatt/trifecta-lens"
Issues = "https://github.com/SigorMatt/trifecta-lens/issues"
Changelog = "https://github.com/SigorMatt/trifecta-lens/releases"
# The two documents a reader should reach for before trusting a finding: what the
# tiers mean, and which incidents we cite (primary-source-verified, with dates).
Specification = "https://github.com/SigorMatt/trifecta-lens/blob/main/SPEC.md"
"Incident citations" = "https://github.com/SigorMatt/trifecta-lens/blob/main/INCIDENTS.md"

[project.scripts]
trifecta-lens = "trifecta_lens.cli:main"
# The inventory capture (task 3.6). It lives OUTSIDE the analyzer core, in its own
# package, because it must launch MCP servers and speak a transport — which core
# may never do (CLAUDE.md invariant 1). It needs the `capture` extra; without it
# the script still installs and prints how to get it, rather than an ImportError.
trifecta-capture = "trifecta_capture.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8",
    "types-PyYAML",
]
# For `trifecta-capture` only. The ANALYZER still has exactly one runtime
# dependency: reading a file needs no SDK.
capture = ["mcp>=1.2"]
# demo/ only (the human-run captures). Isolated from the analyzer core, which
# has zero runtime dependencies: `make check` uses `dev` and never installs this.
# Every demo module imports these lazily (inside functions), exactly as
# providers.py imports its SDK, so the modules import and unit-test without the
# extra — only a live capture pulls the packages in. Core stays stdlib-pure.
#   Transports: `anthropic` (Anthropic endpoint), `openai` (OpenAI-compatible /
#   Ollama / Hugging Face router endpoints).
#   Real-MCP capture (Phase 2, task 2.4/2.5): `mcp` is the MCP client/server SDK
#   (stdio transport); `opentelemetry-sdk` + the OTLP proto-common encoder emit a
#   REAL OTLP trace document; `openinference-semantic-conventions` supplies the
#   OpenInference attribute keys the core loader already keys on.
demo = [
    "anthropic>=0.40",
    "openai>=1.0",
    "mcp>=1.2",
    "opentelemetry-sdk>=1.20",
    "opentelemetry-exporter-otlp-proto-common>=1.20",
    "openinference-semantic-conventions>=0.1.9",
]

[tool.hatch.build.targets.wheel]
# Ship the analyzer plus the capture entrypoint — the two halves a stranger needs
# to run this on their own agent without cloning the repo. demo/ and tests/ are
# development/human-run and are not distributed.
packages = ["trifecta_lens", "trifecta_capture"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true

# The MCP SDK ships only in the `capture` extra, and `make check` installs only
# `dev` — so type-checking the capture CLI must not require the SDK to be present.
# It is imported lazily there for exactly the same reason.
[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
